; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_if_python3.c_ex_py3do.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_if_python3.c_ex_py3do.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@init_range_cmd = common dso_local global i64 0, align 8
@run_do = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ex_py3do(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %3 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %4 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = inttoptr i64 %5 to i8*
  %7 = load i64, i64* @init_range_cmd, align 8
  %8 = trunc i64 %7 to i32
  %9 = load i64, i64* @run_do, align 8
  %10 = trunc i64 %9 to i32
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %12 = bitcast %struct.TYPE_3__* %11 to i8*
  %13 = call i32 @DoPyCommand(i8* %6, i32 %8, i32 %10, i8* %12)
  ret void
}

declare dso_local i32 @DoPyCommand(i8*, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
